# kql-panopticon

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/sentinel-packs/: .gitignore  README.md  generate_packs.py
src/: client.rs  error.rs  main.rs  query_job.rs  query_pack.rs  session.rs  workspace.rs
src/cli/: args.rs  export_pack.rs  mod.rs  run_pack.rs
src/tui/: message.rs  mod.rs  update.rs
src/tui/model/: jobs.rs  mod.rs  packs.rs  query.rs  session.rs  settings.rs  workspaces.rs
src/tui/view/: controls.rs  jobs.rs  kql_highlight.rs  mod.rs  packs.rs  popup.rs  query.rs  session.rs  settings.rs  syntax_textarea.rs  tabs.rs  workspaces.rs
